[gd_scene load_steps=6 format=3 uid="uid://einu3no05v7o"]

[ext_resource type="Script" path="res://hud/hud.gd" id="1_3o8qj"]
[ext_resource type="LabelSettings" uid="uid://relqmw8kahmp" path="res://assets/GL_48_white.tres" id="1_fii4c"]
[ext_resource type="Texture2D" uid="uid://5tv78pr1s0ck" path="res://assets/items/pixel heart 2.png" id="2_lw83m"]
[ext_resource type="LabelSettings" uid="uid://dc0d2rq3uhg1x" path="res://assets/LG_64_Title.tres" id="3_b1rkf"]
[ext_resource type="LabelSettings" uid="uid://bhiv6vu7y6vkm" path="res://assets/LG_24_white.tres" id="4_fhijt"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3o8qj")

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="HB" type="HBoxContainer" parent="MC"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="MC/HB"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "0000"
label_settings = ExtResource("1_fii4c")
vertical_alignment = 1

[node name="HB_Hearts" type="HBoxContainer" parent="MC/HB"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="L1" type="TextureRect" parent="MC/HB/HB_Hearts"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("2_lw83m")
stretch_mode = 5

[node name="L2" type="TextureRect" parent="MC/HB/HB_Hearts"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("2_lw83m")
stretch_mode = 5

[node name="L3" type="TextureRect" parent="MC/HB/HB_Hearts"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("2_lw83m")
stretch_mode = 5

[node name="L4" type="TextureRect" parent="MC/HB/HB_Hearts"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("2_lw83m")
stretch_mode = 5

[node name="L5" type="TextureRect" parent="MC/HB/HB_Hearts"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("2_lw83m")
stretch_mode = 5

[node name="EndScreen" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.00392157, 0.0980392, 0.745098)

[node name="VB_LevelComplete" type="VBoxContainer" parent="EndScreen"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="EndScreen/VB_LevelComplete"]
layout_mode = 2
text = "LEVEL COMPLETE!"
label_settings = ExtResource("3_b1rkf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="EndScreen/VB_LevelComplete"]
layout_mode = 2
text = "Press Jump For Next Level"
label_settings = ExtResource("4_fhijt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VB_GameOver" type="VBoxContainer" parent="EndScreen"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="EndScreen/VB_GameOver"]
layout_mode = 2
text = "GAME OVER!"
label_settings = ExtResource("3_b1rkf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="EndScreen/VB_GameOver"]
layout_mode = 2
text = "Press Jump For Main Menu"
label_settings = ExtResource("4_fhijt")
horizontal_alignment = 1
vertical_alignment = 1
